Fix alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,9 +41,12 @@ h2 {
   font-size: 2.25em;
 }
 
-h3,
-i {
+h3 {
   font-size: 1.5em;
+}
+
+i {
+  font-size: 2em;
 }
 
 p {
@@ -168,6 +171,10 @@ img {
   padding-left: 3em;
 }
 
+.ps-9 {
+  padding-left: 144px;
+}
+
 .pt-1 {
   padding-top: 1em;
 }
@@ -238,6 +245,11 @@ img {
   background-color: var(--color-code1);
 }
 
+.profile-link-projects:hover {
+  background-color: var(--color-code2);
+  color: var(--color-code1);
+}
+
 .project-title {
   font-size: 1.25em;
   padding-bottom: 0.25em;
@@ -259,7 +271,7 @@ object {
 /* ==== Portfolio & contact styles ends ==== */
 @media only screen and (width: 1440px) {
   #projects-container {
-    padding: 2.5em;
+    padding: 16px 210px 48px;
     justify-content: unset;
   }
 }
@@ -267,6 +279,11 @@ object {
 @media only screen and (max-width: 1024px) {
   #projects-container {
     gap: 1.5em;
+  }
+
+  h1.ps-9,
+  h3.ps-9 {
+    padding-left: 32px;
   }
 }
 
@@ -329,9 +346,12 @@ object {
     font-size: 1.75em;
   }
 
-  h3,
-  #repo i {
+  h3 {
     font-size: 1em;
+  }
+
+  #repo i {
+    font-size: 1.5em;
   }
 
   #navbar {
@@ -346,7 +366,6 @@ object {
     max-width: 100%;
   }
 
-  p,
   .project-title {
     font-size: 0.75em;
   }
@@ -379,8 +398,16 @@ object {
 }
 
 @media only screen and (max-width: 428px) {
+  i {
+    font-size: 1.5em;
+  }
+
   h1 {
     font-size: 2.25em;
+  }
+
+  #name-tag p {
+    font-size: 0.75em;
   }
 
   .container {
@@ -407,7 +434,7 @@ object {
     font-size: 1em;
   }
 
-  #contact > div {
+  .connect > div {
     gap: 1em;
   }
 }
@@ -436,7 +463,7 @@ object {
   }
 
   #repo {
-    gap: 1.5em;
+    gap: 1em;
   }
 
   #repo div {
@@ -457,9 +484,17 @@ object {
     font-size: 1.2em;
   }
 
-  h3,
-  #repo i {
+  h1.ps-9,
+  h3.ps-9 {
+    padding-left: 16px;
+  }
+
+  h3 {
     font-size: 0.9375em;
+  }
+
+  #repo i {
+    font-size: 1.25em;
   }
 
   #name-tag {
